# ompi

config/: opal_check_numa.m4
ompi/contrib/libompitrace/: Makefile.am  gather.c  gatherv.c  scatter.c  scatterv.c
ompi/mca/coll/sharm/: .clang-format  .gitignore  Makefile.am  README.md  coll_sharm.h  coll_sharm_algorithm_types.h  coll_sharm_allgather.c  coll_sharm_allgather_cico.c  coll_sharm_allgather_cma.c  coll_sharm_allgather_xpmem.c  coll_sharm_allgatherv.c  coll_sharm_allgatherv_cico.c  coll_sharm_allgatherv_cma.c  coll_sharm_allgatherv_xpmem.c  coll_sharm_allreduce.c  coll_sharm_allreduce_cico.c  coll_sharm_allreduce_cico_rbcast.c  coll_sharm_alltoall.c  coll_sharm_alltoall_cico.c  coll_sharm_alltoall_cma.c  coll_sharm_alltoall_xpmem.c  coll_sharm_alltoallv.c  coll_sharm_alltoallv_cico.c  coll_sharm_alltoallv_cma.c  coll_sharm_alltoallv_xpmem.c  coll_sharm_alltoallw.c  coll_sharm_alltoallw_cico.c  coll_sharm_alltoallw_cma.c  coll_sharm_alltoallw_xpmem.c  coll_sharm_barrier.c  coll_sharm_bcast.c  coll_sharm_bcast_cico.c  coll_sharm_bcast_cico_hier.c  coll_sharm_bcast_cma.c  coll_sharm_bcast_knem.c  coll_sharm_bcast_xpmem.c  coll_sharm_component.c  coll_sharm_constants.h  coll_sharm_datatype.h  coll_sharm_exscan.c  (+42 more)
ompi/mca/coll/sm/: Makefile.am  coll_sm.h  coll_sm_allgather.c  coll_sm_allgatherv.c  coll_sm_alltoall.c  coll_sm_gather.c  coll_sm_gatherv.c  coll_sm_module.c  coll_sm_scatter.c  coll_sm_scatterv.c
